# cdd-cmdb

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  LICENSE  MANIFEST.in  README.md  cmdb.db  conftest.py  demo.sh  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-in-spec.yml  new-test-suite.yml
.github/workflows/: generate-examples.yml  validate.yml
docs/: _config.yml  api-contract.md  architecture.md  generator.md  getting-started.md  index.md  profiles.md  writing-tests.md
examples/minimal-fastapi/: README.md  app.py  requirements.txt
examples/minimal-flask/: README.md  app.py  compliance-minimal.json  requirements.txt
generator/: __main__.py  backends.py  badge.py  cache.py  cli.py  context.py  orchestrator.py  prompts.py  providers.py  server.py
harness/: client.py
harness/factories/: ci_factory.py
profiles/: enterprise.ini  minimal.ini  standard.ini
reference/: app.py  requirements.txt
specs/openapi/: cmdb.yaml
specs/schemas/: ci.schema.json  relationship.schema.json
suites/audit/: test_history.py
suites/core/: test_ci_crud.py  test_relationships.py  test_schema_validation.py
suites/diff/: test_diff.py
suites/discovery/: test_bulk_import.py
suites/governance/: test_policies.py
suites/graph/: test_impact.py  test_traversal.py
suites/performance/: test_latency.py  test_throughput.py
suites/reconciliation/: test_reconciliation.py
suites/search/: test_search.py
suites/security/: test_auth.py  test_injection.py
suites/tags/: test_tags.py
suites/ttl/: test_ttl.py
suites/webhooks/: test_webhooks.py
