[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cdd-cmdb-spec"
version = "1.0.0"
description = "Test suite specification for a compliant CMDB instance"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pytest>=8",
    "hypothesis>=6.100",
]

[project.optional-dependencies]
generator = [
    "anthropic>=0.40",
]
openai = [
    "openai>=1.0",
]
gemini = [
    "google-genai>=1.0",
]
all-providers = [
    "anthropic>=0.40",
    "openai>=1.0",
    "google-genai>=1.0",
]

[project.scripts]
cmdb-generate = "generator.cli:main"

[tool.setuptools.packages.find]
include = ["harness*", "generator*", "suites*"]

[tool.pytest.ini_options]
testpaths = ["suites"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
